almost finish the QuizGameActivity ( not test yet )